Dark mode fixes and index reestructuring

--- a/ClubApp/static/style/style.css
+++ b/ClubApp/static/style/style.css
@@ -243,11 +243,13 @@ ul#menu li a:hover
 { width: 100%;
   font-family: 'trebuchet ms', sans-serif;
   font-size: 100%;
+  position: relative;
   height: 80px;
   padding: 28px 0 5px 0;
   text-align: center; 
   background: #CCC;
   border-top: 1px solid #AAA;
+  margin-top: 100px;
   color: #FFF;}
 
 #footer p
@@ -468,4 +470,8 @@ p{
 .dark-mode-background-lighter {
   background: #424242 !important;
   border: 1px solid #424242 !important
+}
+
+.tiempo-list {
+  list-style: circle !important;
 }
